
        *********************************************
        **                                         **
        **   CHANGES IN DATA.TABLE VERSION 1.8.9   **
        **                                         **
        **        In development, unstable         **
        **                                         **
        *********************************************

BUG FIXES

    o   Fixed format errors of timings produced by fread(...,verbose=TRUE). Caused by recent
        changes from (double)currentTime() to (clock_t)clock() at C level to pass R-devel
        checks. Tests don't check the verbose output of fread() so it slipped through.

USER VISIBLE CHANGES

    o   := on a null data.table now gives a clearer error message :
          "Cannot use := to add columns to a null data.table (no columns), currently. You can use := 
           to add (empty) columns to an empty data.table (1 or more columns, all 0 length), though."
        rather than the untrue :
          "Cannot use := to add columns to an empty data.table, currently"

    o   data.table(NULL) now prints "Null data.table (0 rows and 0 cols)" and FAQ 2.5 has been
        improved. Thanks to:
          http://stackoverflow.com/questions/15317536/is-null-does-not-work-on-null-data-table-in-r-possible-bug

NOTES

    o   Tests 617,646 and 647 could sometimes fail (e.g. r-prerel-solaris-sparc on 7 Mar 2013)
        due to machine tolerance. Fixed.
        
    o   There are now 945 raw tests, as reported by test.data.table().
    
             
        *********************************************
        **                                         **
        **   CHANGES IN DATA.TABLE VERSION 1.8.8   **
        **                                         **
        **          On CRAN : 06 Mar 2013          **
        **                                         **
        *********************************************

NEW FEATURES

    o   New function fread(), a fast and friendly file reader.